fixed stacked image alingment issue on small screens.

--- a/src/layouts/MainHeader/MainHeader.css
+++ b/src/layouts/MainHeader/MainHeader.css
@@ -131,7 +131,7 @@
 
     .gifImage {
       position: relative;
-      top: 65px;
+      top: 48px;
       left: 0px;
       z-index: 1;
     }
